--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./files/style/grid.css">
+    <link rel="shortcut icon" href="./files/images/mouse2.jpg" type="image/x-icon">
     <title>Homepage</title>
 </head>
 <body>
