modified my css and html

--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
 <body>
     <main>
         <section class="part1">
-            <h2><a href="./files/accountform.html">accountform</a></h2>
+            <h2><a href="./files/accountform.html">Accountform</a></h2>
         </section>
         <section class="part2">
-            <h2><a href="./files/bootstrap.html">bootstrap</a></h2>
+            <h2><a href="./files/bootstrap.html">Bootstrap</a></h2>
         </section>
         <section class="part3">
-            <h2><a href="./files/calc.html">calc</a></h2>
+            <h2><a href="./files/calc.html">Calc</a></h2>
         </section>
         <section class="part4">
-            <h2><a href="./files/calculator.html">calculator</a></h2>
+            <h2><a href="./files/calculator.html">Calculator</a></h2>
         </section>
         <section class="part5">
-            <h2><a href="./files/faith.html">faith</a></h2>
+            <h2><a href="./files/faith.html">Faith</a></h2>
         </section>
         <section class="part6">
-            <h2><a href="./files/index.html">index</a></h2>
+            <h2><a href="./files/index.html">Index</a></h2>
         </section>
         <section class="part7">
-            <h2><a href="./files/rhema.html">rhema</a></h2>
+            <h2><a href="./files/rhema.html">Rhema</a></h2>
         </section>
         <section class="part8">
-            <h2><a href="./files/table.html">table</a></h2>
+            <h2><a href="./files/table.html">Table</a></h2>
         </section>
         <section class="part9">
-            <h2><a href="./files/tega.html">tega</a></h2>
+            <h2><a href="./files/tega.html">Tega</a></h2>
+        </section>
+        <section class="part10">
+           <h2><a href="./files/google.html">Google Homepage</a></h2>
         </section>
     </main>
 </body>
