modified my html and css

--- a/files/calculator.html
+++ b/files/calculator.html
@@ -13,7 +13,7 @@
             
 
                  <tr>
-                  <td colspan="10" >
+                  <td id="td" colspan="10" >
                      <input type="text" name="display" id="display" disabled>
                   </td>
                </tr>  
